[MOOSE-8]: update grid presets and add styles to fix align wide container with fluid value

--- a/wp-content/themes/core/assets/pcss/layout/_variables.pcss
+++ b/wp-content/themes/core/assets/pcss/layout/_variables.pcss
@@ -11,5 +11,5 @@
 body {
 	--grid-margin: var(--wp--custom--spacing--grid-margin);
 	--grid-gutter: var(--wp--custom--spacing--grid-gutter);
-	--grid-max-width: calc(100% - var(--grid-margin) * 2);
+	--grid-max-width: var(--wp--style--global--wide-size);
 }
